<resources>
    <string name="app_name">安卓玩Kt版</string>
    <string name="str_desc">desc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_title">标题</string>
    <string name="title_activity_login">登 录</string>
    <string name="prompt_password">请输入密码</string>
    <string name="str_password">密码</string>
    <string name="str_login">登录</string>
    <string name="str_account">账号</string>
    <string name="str_search">文章搜索</string>
    <string name="open_drawer">openDrawer</string>
    <string name="close_drawer">closeDrawer</string>
    <string name="str_personal_integral">个人积分</string>
    <string name="str_integral_rank">积分排名</string>
    <string name="str_my_favorite">我的收藏</string>
    <string name="str_about_author">关于作者</string>
    <string name="str_about_app">关于程序</string>
    <string name="str_welcome_title_1">安卓玩Kt版</string>
    <string name="str_welcome_title_2">一个专业的Android社区</string>
    <string name="str_register">注册账号？</string>
    <string name="str_coincount">积分</string>
    <string name="str_rank">排名</string>
    <string name="str_user_name">用户名</string>
    <string name="str_again_pass_word">再一次密码</string>
    <string name="str_pass_word">密码</string>
    <string name="str_top">置顶</string>
</resources>
