<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventListner"
            type="com.ldc.wandroidkt.ui.activitys.RegisterActivity.EventListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activitys.RegisterActivity">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:fitsSystemWindows="true"
            android:theme="@style/toolbar_theme"
            app:titleTextColor="@color/color_ffffff" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_bar"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_100"
            android:layout_marginEnd="@dimen/dp_40"
            android:hint="@string/str_user_name" />

        <EditText
            android:id="@+id/et_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_user_name"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_40"
            android:hint="@string/str_pass_word"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_re_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pass_word"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_40"
            android:hint="@string/str_again_pass_word"
            android:inputType="textPassword" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_100"
            android:background="@drawable/btn_bg"
            android:onClick="@{(v)->eventListner.register(v)}"
            android:text="@string/str_register"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>
</layout>